[gd_scene load_steps=6 format=3 uid="uid://cgg0k3yhl16j"]

[ext_resource type="Script" path="res://world/world.gd" id="1_dkcx4"]
[ext_resource type="PackedScene" uid="uid://isx577j7rxo8" path="res://gameSurfaces/play_area.tscn" id="1_yj447"]
[ext_resource type="PackedScene" uid="uid://2nf8l3hb50cb" path="res://gameSurfaces/side_bar.tscn" id="2_1o8eq"]
[ext_resource type="Texture2D" uid="uid://ctr6uycpaxsv4" path="res://artAssets/uiElements/nextWaveUp1.png" id="3_mippw"]
[ext_resource type="Texture2D" uid="uid://w61jqcdx2275" path="res://artAssets/uiElements/nextWaveUp2.png" id="4_38fsx"]

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_dkcx4")
money = 200
health = 10

[node name="PlayArea" parent="." instance=ExtResource("1_yj447")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Button" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.15
anchor_right = 0.25
anchor_bottom = 0.175
offset_left = 448.0
offset_top = 10.0
offset_right = 614.0
offset_bottom = 41.0
texture_normal = ExtResource("3_mippw")
texture_pressed = ExtResource("4_38fsx")
metadata/_edit_use_anchors_ = true

[node name="SideBar" parent="." instance=ExtResource("2_1o8eq")]
position = Vector2(320, 304.5)

[connection signal="tower_slection_mode_entered" from="." to="PlayArea" method="_on_world_tower_slection_mode_entered"]
[connection signal="build_mode_exited" from="PlayArea" to="." method="_on_play_area_build_mode_exited"]
[connection signal="earnCoins" from="PlayArea" to="." method="_on_play_area_earn_coins"]
[connection signal="enemyMadeIt" from="PlayArea" to="." method="_on_play_area_enemy_made_it"]
[connection signal="waveCompleted" from="PlayArea" to="." method="_on_play_area_wave_completed"]
[connection signal="button_up" from="Control/Button" to="." method="_on_button_button_up"]
[connection signal="tower_selected" from="SideBar" to="." method="_on_side_bar_tower_selected"]
